# micro_uuv

./: .gitignore  .gitmodules
micro_uuv/: CMakeLists.txt  package.xml
micro_uuv_bringup/: CMakeLists.txt  package.xml
micro_uuv_bringup/launch/: bringup.launch  bringup_mapping_payload.launch  bringup_tube.launch
micro_uuv_config/: CMakeLists.txt  package.xml
micro_uuv_config/launch/: bathy_swath_sonar.launch  dvl_a50.launch  gps.launch  ina260.launch  interface.launch  multimaster.launch  waterlinked_dvl.launch  xsens_mti.launch
micro_uuv_config/param/: bathy_swath_sonar.yaml  dvl_a50.yaml  gpsd_client.yaml  moos_interface.yaml  waterlinked_dvl.yaml  xsens_mti_node.yaml
micro_uuv_description/: CMakeLists.txt  package.xml
micro_uuv_description/launch/: description.launch
micro_uuv_description/urdf/: base.urdf.xacro
micro_uuv_interface/: CMakeLists.txt  package.xml
micro_uuv_interface/config/: bridge.moos  simulation-bridge.moos  simulation.moos  wifi-bridge.moos
micro_uuv_interface/launch/: interface-over-wifi.launch  interface.launch
micro_uuv_interface/src/: interface_node.cpp
micro_uuv_interface/src/micro_uuv_interface/: moos_node.cpp  moos_node.h  pool.h  process.cpp  process.h  ros_node.cpp  ros_node.h
micro_uuv_localization/: CMakeLists.txt  package.xml
micro_uuv_msgs/: CMakeLists.txt  package.xml
micro_uuv_msgs/msg/: BoolMap.msg  Gps.msg  IvpHelmState.msg  MoosDebug.msg  Power.msg  Pressure.msg
micro_uuv_power/: CMakeLists.txt  package.xml
micro_uuv_power/src/: power_node.py
micro_uuv_tf_teleop/: CMakeLists.txt  package.xml
micro_uuv_tf_teleop/src/: micro_uuv_rf_teleop_node.cpp  micro_uuv_rf_teleop_remote_node.cpp
micro_uuv_tf_teleop/src/micro_uuv_rf_teleop/: dictionary.h  micro_uuv_rf_teleop.h  micro_uuv_rf_teleop_remote.cpp  micro_uuv_rf_teleop_remote.h  micro_uuv_rf_teleop_robot.cpp
