<?xml version="1.0"?>
<package format="2">
  <name>micro_uuv_interface</name>
  <version>0.0.1</version>
  <description>Interface between MOOS-IvP and ROS for Riptide uUUV</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>waterlinked_dvl</depend>
  <depend>micro_uuv_msgs</depend>

  <export>

  </export>
</package>
